[gd_scene load_steps=5 format=2]

[ext_resource path="res://TopGUI.gd" type="Script" id=1]
[ext_resource path="res://fonts/ShareTechMono-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://themes/theme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[node name="TopGUI" type="MarginContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -220.0
margin_top = 10.0
margin_right = 220.0
margin_bottom = 86.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="HBoxContainer" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_right = 440.0
margin_bottom = 83.0

[node name="GameName" type="Label" parent="HBoxContainer"]
margin_right = 440.0
<<<<<<< HEAD
margin_bottom = 30.0
=======
margin_bottom = 37.0

[node name="GameName" type="Label" parent="Box/HBoxContainer"]
margin_right = 418.0
margin_bottom = 37.0
>>>>>>> 8b7ca2ac2579daa12ec60facd9358c5dbb0d3671
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 1, 0.0901961, 1 )
text = "Quantum Tetris"
align = 1
valign = 1

<<<<<<< HEAD
[node name="VBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
editor/display_folded = true
margin_top = 34.0
=======
[node name="Speed" type="Button" parent="Box/HBoxContainer"]
margin_left = 422.0
margin_right = 440.0
margin_bottom = 37.0

[node name="VBoxContainer" type="HBoxContainer" parent="Box"]
margin_top = 41.0
>>>>>>> 8b7ca2ac2579daa12ec60facd9358c5dbb0d3671
margin_right = 440.0
margin_bottom = 83.0

[node name="HBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
editor/display_folded = true
margin_right = 90.0
margin_bottom = 42.0

[node name="Score" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 90.0
margin_bottom = 19.0
theme = ExtResource( 3 )
text = "Score"

[node name="HighScore" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 23.0
margin_right = 90.0
margin_bottom = 42.0
theme = ExtResource( 3 )
text = "High Score"

[node name="HBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
editor/display_folded = true
margin_left = 94.0
margin_right = 103.0
margin_bottom = 42.0

[node name="ScoreNum" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 9.0
margin_bottom = 19.0
theme = ExtResource( 3 )
text = "0"

[node name="HighScoreNum" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_top = 23.0
margin_right = 9.0
margin_bottom = 42.0
theme = ExtResource( 3 )
text = "0"

<<<<<<< HEAD
[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_left = 218.0
margin_right = 328.0
=======
[node name="Player_Name" type="Label" parent="Box/VBoxContainer"]
margin_left = 210.0
margin_right = 336.0
>>>>>>> 8b7ca2ac2579daa12ec60facd9358c5dbb0d3671
margin_bottom = 42.0
size_flags_horizontal = 6
size_flags_vertical = 3
text = "Name Last Name"
align = 1
valign = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]
<<<<<<< HEAD
=======
[connection signal="pressed" from="Box/HBoxContainer/Speed" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
>>>>>>> 8b7ca2ac2579daa12ec60facd9358c5dbb0d3671
